--- a/module_b/build.gradle
+++ b/module_b/build.gradle
@@ -12,11 +12,15 @@ android {
     defaultConfig {
         minSdkVersion cfg.minSdkVersion
         targetSdkVersion cfg.targetSdkVersion
+
         if (isApp.toBoolean()) {
             applicationId cfg.applicationId + ".b"
             versionCode cfg.versionCode
             versionName cfg.versionName
         }
+
+        resourcePrefix "b_"
+
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = [AROUTER_MODULE_NAME: "b"]
