--- a/module_a/src/main/AndroidManifest.xml
+++ b/module_a/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <application>
         <activity
-            android:name=".ModuleActivity"
+            android:name=".ModuleAActivity"
             android:screenOrientation="portrait" />
     </application>
 
