--- a/module_b/src/dev/AndroidManifest.xml
+++ b/module_b/src/dev/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fxyan.module.b">
+    package="com.fxyan.moduleapp.b">
 
     <application
         android:name="com.fxyan.moduleapp.common.BaseApp"
@@ -8,7 +8,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.fxyan.moduleapp.b.LauncherActivity"
+            android:name=".LauncherActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
