--- a/module_b/src/main/AndroidManifest.xml
+++ b/module_b/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fxyan.module.b">
+    package="com.fxyan.moduleapp.b">
 
     <application>
         <activity
